// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateAPIKey /> should render when [props.newKey] and [state.copied] set 1`] = `
<Modal
  label="Create API Key"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <Create__StyledCreateAPIKey>
    <strong>
      Here is your key.
    </strong>
    <small>
      Make note of it now. For security purposes, it will not be shown again.
    </small>
    <Create__StyledFlex
      alignContent="stretch"
      alignItems="stretch"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      >
        <Input__InputContainer
          align="right"
        >
          <Create__CreateAPIKeyInput
            readOnly={true}
            value="123abc"
          />
          <CopyToClipboard
            onCopy={[Function]}
            text="123abc"
          >
            <Input__InputIcon
              name="copy"
            />
          </CopyToClipboard>
        </Input__InputContainer>
      </FlexItem>
    </Create__StyledFlex>
    <Create__CreateAPIKeyCopied
      show={true}
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="check"
      />
       Copied
    </Create__CreateAPIKeyCopied>
  </Create__StyledCreateAPIKey>
</Modal>
`;

exports[`<CreateAPIKey /> should render when [state.newKey] is empty 1`] = `
<Modal
  label="Create API Key"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create API Key
  </ModalHeader>
  <Connect(CreateAPIKeyInfo) />
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          label="Name"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <label>
        Permissions
      </label>
      <Connect(APIPermissions)
        keyPermissions={
          Object {
            "bar": false,
            "foo": false,
          }
        }
        onChange={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateAPIKey /> should render when [state.newKey] set 1`] = `
<Modal
  label="Create API Key"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <Create__StyledCreateAPIKey>
    <strong>
      Here is your key.
    </strong>
    <small>
      Make note of it now. For security purposes, it will not be shown again.
    </small>
    <Create__StyledFlex
      alignContent="stretch"
      alignItems="stretch"
    >
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={1}
        shrink={1}
      >
        <Input__InputContainer
          align="right"
        >
          <Create__CreateAPIKeyInput
            readOnly={true}
            value="123abc"
          />
          <CopyToClipboard
            onCopy={[Function]}
            text="123abc"
          >
            <Input__InputIcon
              name="copy"
            />
          </CopyToClipboard>
        </Input__InputContainer>
      </FlexItem>
    </Create__StyledFlex>
    <Create__CreateAPIKeyCopied
      show={false}
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="check"
      />
       Copied
    </Create__CreateAPIKeyCopied>
  </Create__StyledCreateAPIKey>
</Modal>
`;
